src/shared/layout/AppLayout/AppLayout.module.scss
@use '@/styles/tokens' as *;
@use '@/styles/mixins' as *;

$header-height-desktop: 71px;
$header-height-tablet: 63px;
$sidebar-width: 206px;

.layout {
    display: grid;
    grid-template-areas:
        'header header'
        'sidebar main';
    grid-template-columns: $sidebar-width minmax(0, 1fr);
    grid-template-rows: $header-height-desktop 1fr;
    min-height: 100vh;

    .main {
        grid-area: main;
    }

    @include media-down(md) {
        grid-template-areas:
            'header'
            'main';
        grid-template-columns: 1fr;
        grid-template-rows: $header-height-tablet 1fr;
    }
}

